# forge

./: CLAUDE.md  Cargo.toml  PROGRESS.md  README.md  ROUND-3.md  SPEC.md
.claude/: settings.local.json
.claude/agents/: docs-explorer.md  senior-rust-engineer.md
.claude/commands/: code-review.md
.claude/skills/forge-popup-overlay/: SKILL.md
.claude/skills/reasoning/: SKILL.md
.claude/skills/tui-sections-focusing-best-practices/: SKILL.md
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: large_response_render.rs  startup.rs
src/: app.rs  error.rs  event.rs  main.rs  terminal.rs
src/actions/: collection.rs  environment.rs  history.rs  mod.rs  navigation.rs  request.rs  response.rs  workspace.rs
src/env/: interpolator.rs  mod.rs  resolver.rs
src/http/: auth.rs  builder.rs  client.rs  executor.rs  mod.rs  stream.rs
src/scripting/: context.rs  engine.rs  mod.rs  stdlib.rs
src/state/: app_state.rs  collection.rs  environment.rs  focus.rs  mod.rs  mode.rs  request_state.rs  response_state.rs  workspace.rs
src/storage/: collection.rs  config.rs  environment.rs  history.rs  mod.rs  workspace.rs
src/ui/: command_palette.rs  confirm_delete.rs  env_editor.rs  highlight.rs  layout.rs  mod.rs  naming_popup.rs  popup.rs  request_tabs.rs  sidebar.rs  status_bar.rs  workspace_switcher.rs
src/ui/request/: auth_editor.rs  body_editor.rs  headers_editor.rs  mod.rs  params_editor.rs  scripts_editor.rs  tab_bar.rs  url_bar.rs
src/ui/response/: body_viewer.rs  cookies_viewer.rs  headers_viewer.rs  mod.rs  tab_bar.rs  timing_viewer.rs
